# tzprofiles

.github/workflows/: build.yml
api/: README.md
api/tzprofiles/: .dockerignore  .gitignore  Makefile  README.md  dipdup.yaml  pyproject.toml
api/tzprofiles/configs/: dipdup.sqlite.yaml  dipdup.swarm.yaml  replay.yaml
api/tzprofiles/deploy/: Dockerfile  compose.sqlite.yaml  compose.swarm.yaml  compose.yaml  sqlite.env.default  swarm.env.default
api/tzprofiles/handlers/: __init__.py  on_origination.py  on_update.py
api/tzprofiles/hooks/: on_index_rollback.py  on_reindex.py  on_restart.py  on_synchronized.py  resolver.py
api/tzprofiles/models/: __init__.py
api/tzprofiles/tests/: test_resolve_profile.py
api/tzprofiles/types/tzprofile/: tezos_storage.py
api/tzprofiles/types/tzprofile/tezos_parameters/: default.py
api/tzprofiles/types/tzprofile_old/: tezos_storage.py
api/tzprofiles/types/tzprofile_old/tezos_parameters/: default.py
api/tzprofiles_indexer/: .dockerignore  .gitignore  README.md  dipdup.yaml  pyproject.toml
api/tzprofiles_indexer/configs/: dipdup.swarm.yaml  replay.yaml
api/tzprofiles_indexer/deploy/: sqlite.env.default
api/tzprofiles_indexer/handlers/: __init__.py  on_factory_origination.py  on_origination.py
api/tzprofiles_indexer/models/: __init__.py
dapp/: webpack.config.js
dapp/src/: App.svelte  store.ts
dapp/src/components/: index.ts
dapp/src/components/icons/: index.ts
dapp/src/helpers/: claims.ts  kepler.ts
dapp/src/routes/: BasicProfile.svelte  Twitter.svelte  index.ts
worker/worker/: worker.js
(+8 files in other folders)
